[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "youporn_api"
version = "1.4"
description = "A Python API for the Porn Site youporn.com"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]
dependencies = [
    "bs4",
    "eaf_base_api",
    "m3u8",
]
classifiers = [
    "Programming Language :: Python",
]

[project.optional-dependencies]
av = ["av; python_version >= '3.10'"]
full = ["lxml", "httpx[http2]", "httpx[socks]"] # H2 for HTTP 2.0 support, LXML for faster parsing speed, though optional :)

[project.urls]
Homepage = "https://github.com/EchterAlsFake/youporn_api"

[tool.setuptools]
packages = { find = {} }

[tool.uv.build-backend]
module-name = "youporn_api"
module-root = ""